--- a/Matterhorn/templates/theodul/.htaccess
+++ b/Matterhorn/templates/theodul/.htaccess
@@ -1,3 +1,4 @@
+RewriteEngine On
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !sendfile.php$ [NC]
 RewriteCond $1#%{REQUEST_URI} ([^#]*)#(.*?)\1$  
