--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker pull legion2/ilias-test-docker
+  - docker pull legion2/ilias-test-docker:release_5-4
 
 script:
-  - docker run --name iliasdev -it -v "${PWD}:/var/www/html/ilias/Customizing/global/plugins/Services/Repository/RepositoryObject/Opencast" legion2/ilias-test-docker "install-plugin.sh xmh robj Repository Services Opencast; cd Customizing/global/plugins/Services/Repository/RepositoryObject/Opencast/; ./test.sh"
+  - docker run --name iliasdev -it -v "${PWD}:/var/www/html/ilias/Customizing/global/plugins/Services/Repository/RepositoryObject/Opencast" legion2/ilias-test-docker:release_5-4 "install-plugin.sh xmh robj Repository Services Opencast; cd Customizing/global/plugins/Services/Repository/RepositoryObject/Opencast/; ./test/test.sh"
   
